--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Primary Meta Tags -->
+    <title>
+      Accurate Weather Forecast | Real-time Weather Updates | WeatherApp
+    </title>
+    <meta
+      name="description"
+      content="Get the most accurate and up-to-date weather forecast for your location. Check weather conditions, hourly updates, and detailed reports on WeatherApp."
+    />
+    <meta
+      name="keywords"
+      content="weather, forecast, real-time weather, hourly weather, weather updates, local weather, weather conditions"
+    />
+    <meta name="author" content="WeatherApp Team" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weather.keyof.dev/" />
+    <meta
+      property="og:title"
+      content="Accurate Weather Forecast | Real-time Weather Updates"
+    />
+    <meta
+      property="og:description"
+      content="Stay informed with the latest weather forecasts, live weather conditions, and detailed updates."
+    />
+    <meta
+      property="og:image"
+      content="https://weather.keyof.dev/social-logo.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://weather.keyof.dev/" />
+    <meta
+      property="twitter:title"
+      content="Accurate Weather Forecast | Real-time Weather Updates"
+    />
+    <meta
+      property="twitter:description"
+      content="Check the latest weather forecast and live updates for your location."
+    />
+    <meta
+      property="twitter:image"
+      content="https://weather.keyof.dev/social-logo.webp"
+    />
+
+    <!-- Schema.org for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "WeatherApp",
+        "url": "https://weather.keyof.dev",
+        "description": "Accurate and real-time weather forecast for any location.",
+        "applicationCategory": "WeatherApplication",
+        "operatingSystem": "All",
+        "browserRequirements": "Requires JavaScript, CSS3",
+        "keywords": "weather, forecast, real-time weather, local weather"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
